k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-api
  namespace: rag-system
  labels:
    app: rag-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rag-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: rag-api
    spec:
      # pod-level security context
      # fsGroup ensures mounted volumes are owned
      # by this group — all containers in the pod
      # can read/write the volume
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - rag-api
                topologyKey: kubernetes.io/hostname

      containers:
        - name: rag-api
          image: 617711905688.dkr.ecr.us-east-1.amazonaws.com/rag-system:2e3fe396
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL # drop all Linux capabilities

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3

          volumeMounts:
            - name: chroma-storage
              mountPath: /app/chroma_db

      volumes:
        - name: chroma-storage
          persistentVolumeClaim:
            claimName: chroma-pvc
